fix: adiciona tumble para imagens e melhora performance